# ssb-vaskify

./: .cookiecutter.json  .cruft.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  noxfile.py  pyproject.toml  sonar-project.properties
.github/workflows/: tests.yml
docs/: conf.py  guide.md  index.md  reference.md
src/: README.md  run-dev.py  run.py
src/vaskify/: __init__.py  __main__.py  control_errors.py  create_data.py  create_test_data.py  createdata.py  detect.py
tests/: __init__.py  test_control_errors.py  test_create_data.py  test_createdata.py  test_detect.py  test_functions.py  test_main.py
