[project]
name = "ssb-vaskify"
version = "0.0.4"
description = "Functions for control and editing of data in official statistics."
authors = [{ name = "Susie Jentoft", email = "susie.jentoft@ssb.no" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dynamic = ["classifiers"]
dependencies = [
    "click>=8.0.1",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "pandas-stubs>=2.2.3.241126"
    ]

[project.urls]
homepage = "https://github.com/statisticsnorway/ssb-vaskify"
repository = "https://github.com/statisticsnorway/ssb-vaskify"
documentation = "https://statisticsnorway.github.io/ssb-vaskify"

[project.scripts]
ssb-vaskify = "vaskify.__main__:main"

[tool.poetry]
classifiers = ["Development Status :: 3 - Alpha"]
requires-poetry = ">=2.0"
packages = [{ include = "vaskify", from = "src" }]

[tool.poetry.group.dev.dependencies]
pygments = ">=2.10.0"
black = { extras = ["jupyter"], version = ">=23.1.0" }
coverage = { extras = ["toml"], version = ">=6.2" }
darglint = ">=1.8.1"
furo = ">=2021.11.12"
mypy = ">=0.930"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
ruff = ">=0.0.284"
pytest = ">=6.2.5"
sphinx = ">=6.2.1"
sphinx-autobuild = ">=2021.3.14"
sphinx-autodoc-typehints = ">=1.24.0"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
myst-parser = { version = ">=0.16.1" }
deptry = ">=0.23.0"

[tool.deptry.per_rule_ignores]
DEP001 = ["nox", "nox_poetry"]  # packages available by default

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["vaskify", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
exclude = "src/run-dev.py"

[tool.ruff]
force-exclude = true  # Apply excludes to pre-commit
show-fixes = true
src = ["src", "tests"]
target-version = "py311"  # Minimum Python version supported
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
extend-exclude = [
    "__pycache__",
    "old",
    ".ipynb_checkpoints",
    "noxfile.py",
    "docs/conf.py",
]
exclude = [
    "src/run-dev.py",
]

# Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN202", # Don't require return type annotation for private functions.
    "ANN401", # Allow type annotation with type Any.
    "D100",   # Supress undocumented-public-module. Only doc of public api required.
    "E402",   # Supress module-import-not-at-top-of-file, needed in jupyter notebooks.
    "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
    "PLR0913", # Supress if more than 5 function arguments
    "FBT002", # Suppress if use boolean arguements
    "PLR2004", # Suppress use of magic values
    "FBT001", # Suppress boolean
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"  # You can also use "numpy".

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"**/tests/*" = [
    "ANN001",  # type annotations don't add value for test functions
    "ANN002",  # type annotations don't add value for test functions
    "ANN003",  # type annotations don't add value for test functions
    "ANN201",  # type annotations don't add value for test functions
    "ANN204",  # type annotations don't add value for test functions
    "ANN205",  # type annotations don't add value for test functions
    "ANN206",  # type annotations don't add value for test functions
    "D100",    # docstrings are overkill for test functions
    "D101",
    "D102",
    "D103",
    "S101",    # asserts are encouraged in pytest
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
